--- a/GymBooking/Views/GymClasses/Details.cshtml
+++ b/GymBooking/Views/GymClasses/Details.cshtml
@@ -40,9 +40,15 @@
             @Html.DisplayNameFor(model => model.AttendingMembers)
         </dt>
 
-       
-
-
+        
+        @{
+            for (int c = 0; c < Model.AttendingMembers.Count;c++)
+            {
+                <div>
+                    @Html.DisplayFor(model => model.AttendingMembers.ElementAt(c).ApplicationUserId)
+                </div>
+            }
+        }
     </dl>
 </div>
 
@@ -51,5 +57,6 @@
     <a asp-action="Edit" aspa-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
 
 
